k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-tracker-app
  namespace: book-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-tracker
  template:
    metadata:
      labels:
        app: book-tracker
    spec:
      containers:
        - name: book-tracker
          image: elenacikarska/book-tracker-app:latest
          ports:
            - containerPort: 5000
