k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-tracker-service
  namespace: book-tracker
spec:
  selector:
    app: book-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
