k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-tracker-ingress
  namespace: book-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /book
            pathType: Prefix
            backend:
              service:
                name: book-tracker-service
                port:
                  number: 80
